--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
     "node-telegram-bot-api": "^0.64.0"
   }
